; ModuleID = '/home/carl/AnghaBench/Atlas/lib/extr_mysql-password.c_lua_password_check.c'
source_filename = "/home/carl/AnghaBench/Atlas/lib/extr_mysql-password.c_lua_password_check.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @lua_password_check to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @lua_password_check(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i64, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i8*, align 8
  store i32* %0, i32** %2, align 8
  %9 = load i32*, i32** %2, align 8
  %10 = call i8* @luaL_checklstring(i32* %9, i32 1, i64* %3)
  store i8* %10, i8** %4, align 8
  %11 = load i32*, i32** %2, align 8
  %12 = call i8* @luaL_checklstring(i32* %11, i32 2, i64* %5)
  store i8* %12, i8** %6, align 8
  %13 = load i32*, i32** %2, align 8
  %14 = call i8* @luaL_checklstring(i32* %13, i32 3, i64* %7)
  store i8* %14, i8** %8, align 8
  %15 = load i32*, i32** %2, align 8
  %16 = load i8*, i8** %4, align 8
  %17 = load i64, i64* %3, align 8
  %18 = load i8*, i8** %6, align 8
  %19 = load i64, i64* %5, align 8
  %20 = load i8*, i8** %8, align 8
  %21 = load i64, i64* %7, align 8
  %22 = call i32 @network_mysqld_proto_password_check(i8* %16, i64 %17, i8* %18, i64 %19, i8* %20, i64 %21)
  %23 = call i32 @lua_pushboolean(i32* %15, i32 %22)
  ret i32 1
}

declare dso_local i8* @luaL_checklstring(i32*, i32, i64*) #1

declare dso_local i32 @lua_pushboolean(i32*, i32) #1

declare dso_local i32 @network_mysqld_proto_password_check(i8*, i64, i8*, i64, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
